[package]
name = "tile-cache-heap-repro"
version = "0.0.1"
edition = "2021"
authors = ["Sunderous"]
publish = false

[dependencies]
bitflags = "1.3"
recastnavigation-sys = {version = "1.0.2", features = ["recast", "detour", "detour_tile_cache"]}
fastlz-sys = { version = "0.1.0" }

[profile.release]
lto = true
